# Website

./: docker-compose.yml  profile (1).publishsettings  profile.publishsettings
.github/: main_mywebsitelr.yml
.github/workflows/: main.yml  main_MyWebsiteLR.yml  main_mywebsitelr.yml
authorisation/: .dockerignore  Dockerfile  README.rst  pyproject.toml
authorisation/.ssh/: auth_keys  auth_keys.pub
authorisation/authorisation/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  base.py  entrypoint.py  models.py  service.py
authorisation/tests/: test_authorisation.py
buffers/: auth.proto  users.proto
personal_website/: .dockerignore  Dockerfile  package-lock.json  package.json
personal_website/src/: App.tsx  index.css  index.tsx
personal_website/src/apps/auth/login/: login.tsx
personal_website/src/apps/auth/signup/: signup.css  signup.tsx
personal_website/src/view/: App.css  App.tsx
personal_website/src/view/feed/: feed.tsx  feed_item.tsx
personal_website/src/view/home/: home.tsx
personal_website/src/view/nav/: navbar.css  navbar.tsx
personal_website/src/view/nav/account/: account.css  account.tsx
personal_website/src/view/nav/options/: options.css  options.tsx
