[tool.poetry]
name = "authorisation"
version = "0.1.0"
description = ""
authors = ["lukerichardson-dev <richardsonluke232@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
grpcio = "^1.44.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grpcio-tools = "^1.44.0"
mypy-protobuf = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
